# oc-memory

./: .gitignore  CLAUDE.md  Cargo.toml  README.en.md  README.md  SKILL.md  openclaw-onefile-setup.sh
.github/workflows/: ci.yml
config/: config.example.toml
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  models.rs  storage.rs
crates/embeddings/: Cargo.toml
crates/embeddings/src/: engine.rs  error.rs  lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs  main.rs
crates/mcp-server/tests/: protocol_test.rs
crates/observer/: Cargo.toml
crates/observer/src/: lib.rs  watcher.rs
crates/search/: Cargo.toml
crates/search/src/: bm25.rs  hybrid.rs  lib.rs  scoring.rs  vector.rs
crates/search/tests/: integration_test.rs  production_test.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/server/tests/: api_test.rs
scripts/: download_model.py  oc-memory-auto-recall.sh  setup_model.sh
