[package]
name = "oc-mcp-server"
description = "MCP (Model Context Protocol) server for AI agent memory integration"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "oc-memory-mcp"
path = "src/main.rs"

[lib]
name = "oc_mcp_server"
path = "src/lib.rs"

[dependencies]
oc-core = { workspace = true }
oc-embeddings = { workspace = true }
oc-search = { workspace = true }
oc-observer = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
