[package]
name = "oc-server"
description = "REST API server for oc-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "oc-memory-server"
path = "src/main.rs"

[lib]
name = "oc_server"
path = "src/lib.rs"

[dependencies]
oc-core = { workspace = true }
oc-embeddings = { workspace = true }
oc-search = { workspace = true }
oc-observer = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
bytes = "1"
tokio = { workspace = true, features = ["full"] }
